# LMT_sim_scratch

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  ballistic_expansion_checks.py  ballistic_propagation_test.ipynb  borde_frame_change_derivation.ipynb  clearout_sanity_checks.ipynb  gaussian_beam_sanity_checks.ipynb  lmt_full_sim.ipynb  lmt_full_sim_quick.ipynb  lmt_real_sequence.py  lmt_sequence.py  lmt_simulation.py  mach_zehnder_with_temperature.ipynb  pyproject.toml  rabi_flop_with_temperature.ipynb  real_sequence_diagnostics.ipynb  requirements.txt  simple_mach_zender.ipynb  slice_duration_vs_survival.ipynb  sliced_rabi_flop_with_temperature.ipynb  test_lmt_real_sequence.py  test_notebook_api_compatibility.py  test_notebooks.py  test_pulse.py  test_pulse_sequence_interface.py  test_states_vector.py
.claude/: settings.json  vendored-refs.yaml
.claude/hooks/: clone_icl_experiments.py
.github/workflows/: unit-tests.yml
docs/: 20260324_position_semiclassical.md  20260325_gaussian_beam_plan.md  20260513-beam-sie-spec.md  20260514-clearout-spec.md  20260519_atomstate_handoff.md  LMT_milestones_and_implementation_plan.md  arp_frame_change_finding.md  roadmap.md
docs/references/: README.md
lmt_sim/: __init__.py  arp.py  imaging.py  lmt_real_sequence.py  lmt_sequence.py  lmt_simulation.py  readout.py  version_info.py
notebooks/: arp_physics_walkthrough.ipynb  arp_physics_walkthrough.py  ballistic_expansion_checks.ipynb  ballistic_expansion_checks.py  ballistic_propagation_test.ipynb  ballistic_propagation_test.py  clearout_sanity_checks.ipynb  clearout_sanity_checks.py  declarative_symmetric_mz_rid75603.py  frequency_scan_n_pulses.ipynb  frequency_scan_n_pulses.py  fringe_rabi_comparison.py  gaussian_beam_sanity_checks.ipynb  gaussian_beam_sanity_checks.py  gravitational_velocity_selection.ipynb  gravitational_velocity_selection.py  lmt_full_sim.ipynb  lmt_full_sim.ipynb.old  lmt_sequence_debug.ipynb  lmt_sequence_debug.py  mach_zehnder_with_temperature.ipynb  mach_zehnder_with_temperature.py  mach_zehnder_with_temperature_pulse_api.ipynb  n_pulse_lmt_filmstrip.ipynb  n_pulse_lmt_filmstrip.py  n_pulse_lmt_sequence.ipynb  n_pulse_lmt_sequence.py  population_leakage_by_m_rid76695.ipynb  population_leakage_by_m_rid76695.py  population_leakage_by_m_rid77450.ipynb  population_leakage_by_m_rid77450.py  rabi_flop_with_temperature.ipynb  rabi_flop_with_temperature.py  real_sequence_diagnostics.ipynb  realistic_excited_state_readout_rid77450.py  rid77450_pulse_record.py  shaped_double_launch_rid74397.py  simple_mach_zender.ipynb  simple_mach_zender.py  slice_duration_vs_survival.ipynb  (+17 more)
tests/: borde_test.py  test_arp.py  test_composite_pulse.py  test_notebooks.py  test_probe_shift.py  test_pulse.py  test_pulse_sequence_interface.py  test_readout.py  test_scripts.py  test_states_vector.py
