[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lmt-sim-scratch"
version = "0.1.0"
description = "Simulation notebooks and scripts for LMT interferometry"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
    "structlog",
    "ipykernel>=7.2.0",
    "git-version-info>=0.7.1",
    "joblib>=1.5.3",
]

[dependency-groups]
dev = [
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "pytest",
    "sympy",
]

[tool.setuptools.packages.find]
include = ["lmt_sim*"]
exclude = ["notebooks*"]
