[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lmt-sim-scratch"
version = "0.1.0"
description = "Simulation notebooks and scripts for LMT interferometry"
requires-python = ">=3.10,<4"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
    "structlog",
    "ipykernel>=7.2.0",
    "git-version-info>=0.7.1",
    "joblib>=1.5.3",
]

[dependency-groups]
dev = [
    "jupytext>=1.19.3",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "pytest",
    "sympy",
]

[tool.setuptools.packages.find]
include = ["lmt_sim*"]
exclude = ["notebooks*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# Ruff's default rule set: pycodestyle errors (E4/E7/E9) and pyflakes (F).
# Line length (E501) is intentionally not enforced -- several physics docstrings
# and comments run long and wrapping them hurts readability.

[tool.ruff.lint.per-file-ignores]
# notebooks/ are jupytext exploration scripts (see CLAUDE.md): they
# legitimately import after a sys.path.insert (E402), use cell-style trailing
# semicolons (E701/E702/E703) and lambdas (E731), and keep imports/redefinitions
# around for interactive use (F401/F811). Format them, but don't fight the style.
"notebooks/**" = ["E402", "E701", "E702", "E703", "E731", "F401", "F811"]
# Module-level pytest.skip(..., allow_module_level=True) must run before the
# imports it guards, which trips E402.
"tests/test_arp.py" = ["E402"]
